# athena

./: .gitignore  App.py  Makefile  README.md  app.py  pyproject.toml
athena/: __init__.py  config.py  secrets.py  utils.py
athena/llm/: __init__.py  client.py  embed.py  models.py  utils.py
athena/llm/research/: __init__.py  breakdown.py  planner.py  research.py
athena/llm/skills/: __init__.py  analyze.py  memory.py  search.py  summarize.py  summary.py  writer.py
athena/openalex/: __init__.py  download.py  errors.py  models.py  search.py  utils.py  work.py
athena/store/: __init__.py  mongo.py  vector.py
pages/: 1_Notes.py  1_Research_Studio.py  2_Autonomous_Agent.py  2_Research_Agent.py
