[tool.poetry]
name = "Athena"
version = "0.1.0"
description = "Research at the speed of thought"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 <3.12"
aiolimiter = "^1.1.0"
cohere = "^4.50"
groq = "^0.5.0"
httpx = "^0.27.0"
jupyter = "^1.0.0"
langchain = "^0.1.0"
langchain-experimental = "^0.0.50"
langchain-groq = "^0.1.0"
langchain-openai = "^0.0.8"
langchain-pinecone = "^0.0.3"
motor = "^3.3.0"
networkx = "^3.2.0"
notebook = "^7.1.0"
openai = "^1.10.0"
pinecone-client = "^3.1.0"
pydantic = "^2.6.0"
pymupdf = "^1.23.20"
python-dotenv = "^1.0.0"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
spacy = "^3.7.4"
streamlit = "^1.30.0"
tenacity = "^8.2.3"
tiktoken = "^0.6.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.12.1"}
isort = "^5.12.0"
pre-commit = "^3.4.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
